feat: notification scanner, ztm stops api endpoint
