# docs/swagger.json
@@ -36,6 +36,34 @@
                     }
                 }
             }
+        },
+        "/ztm/stop/{stopId}": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ztm"
+                ],
+                "summary": "Get ZTM stop with all line numbers",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ZTM Stop ID",
+                        "name": "stopId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -44,7 +72,8 @@
             "required": [
                 "deviceToken",
                 "lineNumber",
-                "stopId"
+                "stopId",
+                "stopName"
             ],
             "properties": {
                 "deviceToken": {
@@ -55,19 +84,23 @@
                     "type": "string",
                     "example": "199"
                 },
-                "precedenceMinutes": {
+                "providerName": {
+                    "type": "string",
+                    "example": "ztm"
+                },
+                "reminderTime": {
                     "type": "integer",
                     "maximum": 60,
                     "minimum": 1,
                     "example": 10
                 },
-                "providerName": {
-                    "type": "string",
-                    "example": "ztm"
-                },
                 "stopId": {
                     "type": "string",
                     "example": "1461"
+                },
+                "stopName": {
+                    "type": "string",
+                    "example": "Przymorze Wielkie"
                 }
             }
         }
