# pkg/notification/entity.go
@@ -8,12 +8,13 @@ import (
 )
 
 type Notification struct {
-	Id                primitive.ObjectID     `json:"id" bson:"_id,omitempty"`
-	Delivered         bool                   `json:"delivered" bson:"delivered"`
-	CreatedAt         time.Time              `json:"createdAt" bson:"createdAt"`
-	DeviceToken       string                 `json:"deviceToken" bson:"deviceToken"`
-	PrecedenceMinutes int                    `json:"precedenceMinutes" bson:"precedenceMinutes"`
-	ProviderName      types.ScheduleProvider `json:"providerName" bson:"providerName"`
-	StopId            string                 `json:"stopId" bson:"stopId"`
-	LineNumber        string                 `json:"lineNumber" bson:"lineNumber"`
+	Id           primitive.ObjectID         `json:"id" bson:"_id,omitempty"`
+	Delivered    bool                       `json:"delivered" bson:"delivered"`
+	CreatedAt    time.Time                  `json:"createdAt" bson:"createdAt"`
+	DeviceToken  string                     `json:"deviceToken" bson:"deviceToken"`
+	ReminderTime int                        `json:"reminderTime" bson:"reminderTime"`
+	ProviderName types.ScheduleProviderName `json:"providerName" bson:"providerName"`
+	StopId       string                     `json:"stopId" bson:"stopId"`
+	StopName     string                     `json:"stopName" bson:"stopName"`
+	LineNumber   string                     `json:"lineNumber" bson:"lineNumber"`
 }
